adicionando referencia busca local

--- a/aprox.bib
+++ b/aprox.bib
@@ -265,3 +265,18 @@ month = {may},
 pages = {533–550},
 numpages = {18}
 }
+
+@article{DBLP:journals/corr/abs-0809-2554,
+  author       = {Anupam Gupta and
+                  Kanat Tangwongsan},
+  title        = {Simpler Analyses of Local Search Algorithms for Facility Location},
+  journal      = {CoRR},
+  volume       = {abs/0809.2554},
+  year         = {2008},
+  url          = {http://arxiv.org/abs/0809.2554},
+  eprinttype    = {arXiv},
+  eprint       = {0809.2554},
+  timestamp    = {Wed, 18 Aug 2021 17:14:17 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-0809-2554.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
