--- a/main.tex
+++ b/main.tex
@@ -684,8 +684,10 @@ Analogamente ao que foi feito na análise da razão de aproximação $3(1 + \eps
 \[(A+T) \leq (1 + \sqrt{2} + \epsilon )\opt(I).\]
 Assim, se fizermos a reescala dos custos de abertura das facilidades antes de rodar o algoritmo de busca local temos um novo algoritmo que é uma $(1 + \sqrt{2} + \epsilon )$-aproximação para o nosso problema.
 
-Charikar e Guha foram responsáveis pro provar a razão de aproximação 3 para esse algoritmo e introduziram a ideia de reescala. A análise feita aqui é de autoria de Gupta e Tangwongsan. 
+A análise feita aqui é de autoria de Gupta e Tangwongsan~\cite{DBLP:journals/corr/abs-0809-2554}. 
 \newpage
+
+\subsection{Algoritmo guloso}
 \bibliographystyle{plain}
 \bibliography{aprox.bib}
 
